refactor: optimize code and remove unused imports